kustomization/tee-tools/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: tee-tools
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec: {}
status: {}
