kustomization/tee-tools/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tee-tools
  name: tee-tools
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: tee-tools
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deployment: tee-tools
    spec:
      containers:
      - env:
        - name: OPENSHIFT_MYSQL_DB_HOST
          value: testdb.tee.svc.cluster.local
        image: quay.io/crubsris/tee-tools:latest
        imagePullPolicy: IfNotPresent
        name: tee-tools
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
