kustomization/tee-tools/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tee-tools
  name: tee-tools
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: tee-tools
  sessionAffinity: None
  type: ClusterIP
status: {}
