kustomization/tee-tools/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: tee-tools
  name: tee-tools
spec:
  path: /
  to:
    kind: Service
    name: tee-tools
    weight: 100
  wildcardPolicy: None
status: {}
